// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/layout/Logo adds logoMini class without sideBarOpen 1`] = `
<a
  href="/"
  onClick={[Function]}
>
  <div
    className="css-NavLogo-pmb2010 css-1oup17m"
    open={false}
  />
</a>
`;

exports[`components/layout/Logo renders correctly with sideBarOpen 1`] = `
<a
  href="/"
  onClick={[Function]}
>
  <div
    className="css-NavLogo-pmb2010 css-1r3h2fj"
    open={true}
  />
</a>
`;
